<resources>
    <string name="app_name">Toptier Odds</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="register">Register</string>
    <string name="danger_zone">Danger Zone</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="user_status">Your Status</string>
    <string name="become_a_vip_member_for_only_kshs_1500_to_enjoy_privileged_services">Become a VIP member for correct, bigger, and sure odds</string>
    <string name="join_vip_for_kshs_1500">Join VIP for $15</string>
    <string name="normal">Normal</string>
    <string name="man_utd">Man City</string>
    <string name="away">Away</string>
    <string name="draw">Draw</string>
    <string name="home">Home</string>
    <string name="_2_74">2.74</string>
    <string name="welcome">Welcome</string>
    <string name="latest_matches">LATEST MATCHES</string>
    <string name="for_accurate_football_predictions">For Accurate Football Odds</string>
    <string name="_1200_nhappy_users">1200\nHappy Members</string>
    <string name="_13_nupcoming_matches">13\nUpcoming Matches</string>
    <string name="_24_nmatches">24\nMatches</string>
    <string name="_36_ncorrect_tips">36\nCorrect Tips</string>
    <string name="all_matches">ALL MATCHES</string>
    <string name="phone_number">Phone Number</string>
    <string name="vs">VS</string>
    <string name="man_united">Man United</string>
    <string name="chelsea_fc">chelsea</string>
    <string name="_10_mar_2021_10_30">10 Mar 2021, 10:30</string>
    <string name="vip">VIP</string>
    <string name="pick_away_2_74"><![CDATA[Pick: Away -> 2.74]]></string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="telegram">Telegram</string>
    <string name="twitter">Twitter</string>
    <string name="click_here_to_contact_us">Click here to Contact Us</string>
    <string name="developed_by_j_p"><![CDATA[{ J&P Developers }]]></string>
    <string name="developers">Developers</string>
    <string name="contacts">Contacts</string>
    <string name="telegram_us">Telegram Us</string>
    <string name="email_us">Email Us</string>
    <string name="whatsapp_us">Whatsapp Us</string>
    <string name="reach_out_to_us_through_this_channels_you_can_send_your_feedback">Reach out to us through this channels. You can send your feedback</string>
    <string name="won">Status: WON</string>
    <string name="available_subscriptions">Available Subscriptions</string>
    <string name="user"><![CDATA[<user>]]></string>
    <string name="top_tier">TopTier</string>
    <string name="toptier_odds">Toptier Odds</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vip_message"><![CDATA[Become VIP for MORE, CORRECT, & DAILY tips]]></string>
    <string name="benefits_of_joining_toptier_odds">Benefits of Joining Toptier Odds</string>
    <string name="benefits_of_choosing_this_app">Benefits of choosing this app:</string>
    <string name="number_one_accurate_odds_predictor">Number one accurate odds predictor</string>
    <string name="correct_odds">Correct odds</string>
    <string name="special_vip_package">Special VIP package</string>
    <string name="join_vip_for_15_to_get_more_sure_and_correct_tips">Join VIP for $15 to get MORE, SURE, and CORRECT tips</string>
    <string name="daily_free_tips">Daily FREE tips</string>
</resources>