<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:background="@color/homeTabs"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/home_message"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/benefits_of_choosing_this_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="17sp"
            android:textColor="@color/green"
            android:text="@string/number_one_accurate_odds_predictor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableLeftCompat="@drawable/won_status" />
        <TextView
            android:textSize="17sp"
            android:textColor="@color/green"
            android:text="@string/correct_odds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableLeftCompat="@drawable/won_status" />
        <TextView
            android:textSize="17sp"
            android:textColor="@color/green"
            android:text="@string/special_vip_package"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableLeftCompat="@drawable/vip_fire" />
        <TextView
            android:textSize="17sp"
            android:textColor="@color/green"
            android:text="@string/daily_free_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableLeftCompat="@drawable/won_status" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/allmatches"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@color/homeTabs"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:text="24\nMatches"/>
            <TextView
                android:id="@+id/correct_tips"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@color/homeTabs"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:text="36\nCorrect Tips"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/upcomingmatches"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@color/homeTabs"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:text="@string/_13_nupcoming_matches"/>
            <TextView
                android:id="@+id/members"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@color/homeTabs"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:text="@string/_1200_nhappy_users"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableLeftCompat="@drawable/vip_fire" />
        <TextView
            android:id="@+id/vip_poster"
            android:text="@string/join_vip_for_15_to_get_more_sure_and_correct_tips"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableRightCompat="@drawable/vip_fire" />
    </LinearLayout>




</LinearLayout>