<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#318A92"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:background="@drawable/round"
            android:src="@mipmap/profile_round"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:text="@string/user"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/normal"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:layout_marginEnd="3dp"
            android:src="@drawable/user_status_check"
            android:layout_width="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="30dp"
            android:layout_marginRight="3dp" />


        <LinearLayout
            android:id="@+id/vip"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/profile_message"
                android:text="@string/vip_message"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_margin="15dp"
                android:textColor="#F57C00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/join_vip"
                android:textColor="#fff"
                android:background="@drawable/blue_button"
                android:text="@string/join_vip_for_kshs_1500"
                android:paddingRight="25dp"
                android:paddingLeft="25dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="ca-app-pub-2013226613512577/6409041542">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</RelativeLayout>