<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#0097A7"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/top"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textColor="#fff"
            android:text="@string/app_name"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/middle"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/user"
            android:hint="enter username/email"
            android:layout_margin="10dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/edit_texts"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <EditText
            android:id="@+id/password"
            android:hint="enter password"
            android:layout_margin="10dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/edit_texts"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="" />

        <TextView
            android:id="@+id/error"
            android:textColor="#f00"
            android:text=""
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_margin="10dp"
            android:text="@string/login"
            android:textColor="#fff"
            android:background="@drawable/blue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/register"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#fff"
            android:text="@string/don_t_have_an_account_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
