<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--    for space-->
    <TextView
        android:background="#263535"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <androidx.cardview.widget.CardView
        android:backgroundTint="#96BEC2"
        android:background="#96BEC2"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/layout_time"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/time"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="#032FCD"
                    android:layout_marginBottom="0dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/_10_mar_2021_10_30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:id="@+id/vip_status"
                    android:textSize="10sp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/vip_status"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_tips"
                android:layout_below="@+id/layout_time"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/away"
                        android:text="@string/away"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text=""
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/home"
                        android:text="@string/home"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="2.5"
                    android:layout_marginStart="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp">
                    <TextView
                        android:id="@+id/team1"
                        android:text="@string/chelsea_fc"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/vs"
                        android:text="@string/vs"
                        android:textSize="13sp"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp" />
                    <TextView
                        android:id="@+id/team2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/man_utd"
                        android:textColor="@color/black"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp">

                    <ImageView
                        android:id="@+id/winlose"
                        android:layout_marginRight="50dp"
                        android:src="@drawable/won_status"
                        android:layout_marginTop="7dp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="50dp" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/layout_tips"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/correct"
                    android:text="Pick => Away"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:layout_marginBottom="2dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>